--- a/Breathe_free.html
+++ b/Breathe_free.html
@@ -4,40 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/png" href="data/download.png"/>
     <title>BreathFree</title>
-    <link rel="stylesheet" href="">
-    <style>
-        *{
-            box-sizing: border-box;
-        }
-        
-
-     body {
-    display: block;
-    margin: 0px;
-    margin-top: 0px;
-    margin-right: 0px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-}   
-.about {
-    text-align: center;
-}
-        
-.about h1 {
-    font-family: 'hurme_geometric_sans_1bold';
-    text-transform: uppercase;
-    color: #006eb8;
-    font-size: 2.5em;
-    padding-bottom: 20px;
-    display: inline-block;
-}
-h1{
-    font-size: 40px;
-    font-family: 'Josefin Sans',sans-serif;
-    font-weight: 600;
-}
-    </style>
+    <link rel="stylesheet" href="/style.css">
+ 
 </head>
 <body>
     <!-- Ye image-background hai -->
