--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <td> <i class="fa fa-youtube-play"></i></td>
         <td> <i class="fa fa-instagram"></i></td>
         <td> <i class="fa fa-phone-square"></i></td>
-        <td></i>Doctor Appointment</td>
+        <td>Doctor Appointment</td>
         <td> <i class="fa fa-adjust"></i></td>
         <td><i class="fas fa-globe-americas"></i>English</td>
 
